renamed to index.html

--- a/bike.html
+++ b/bike.html
@@ -45,7 +45,7 @@ with my mother. Looking for someone to hit up dirt jumps and soquel demo forest 
 </div>
 <form class = tab>
 <select name="projects" id="projects" accesskey="target">
-  <option value = "resume.html">Home</option>
+  <option value = "index.html">Home</option>
   <option value = "plank.html">Plank Keyboard</option>
   <option value = "bike.html">Bicycle Repair</option>
   <option value = "vroom.html">Vehicle Maintence</option>
