--- a/cbim.html
+++ b/cbim.html
@@ -27,7 +27,7 @@
 </div>
 <form class = tab>
 <select name="projects" id="projects" accesskey="target">
-  <option value = "resume.html">Home</option>
+  <option value = "index.html">Home</option>
   <option value = "plank.html">Plank Keyboard</option>
   <option value = "bike.html">Bicycle Repair</option>
   <option value = "vroom.html">Vehicle Maintence</option>
