--- a/plank.html
+++ b/plank.html
@@ -41,7 +41,7 @@
 <br>
 <form class = tab>
 <select name="projects" id="projects" accesskey="target">
-  <option value = "resume.html">Home</option>
+  <option value = "index.html">Home</option>
   <option value = "cbim.html">Console Based Inventory Manager</option>
   <option value = "bike.html">Bicycle Repair</option>
   <option value = "vroom.html">Vehicle Maintence</option>
