--- a/vroom.html
+++ b/vroom.html
@@ -46,7 +46,7 @@ something more sporty and modern, so if you know anyone selling a DRZ400sm, SV65
 </div>
 <form class = tab>
 <select name="projects" id="projects" accesskey="target">
-  <option value = "resume.html">Home</option>
+  <option value = "index.html">Home</option>
   <option value = "plank.html">Plank Keyboard</option>
   <option value = "bike.html">Bicycle Repair</option>
   <option value = "vroom.html">Vehicle Maintence</option>
