--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <center>
   <div class="row">
     <div class ="column">
-      <img id = "coolGuy" src = "coolGuy.jpg" alt = "Kevin pham with phillip" >
+      <img id = "coolGuy" src = "coolGuy.JPG" alt = "Kevin pham with phillip" >
     </div>
     <div class ="column">
       <center>
