--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang ="en">
 <head>
   <title> Kevin's Resume </title>
-  <link rel = "stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <meta name ="viewport" content ="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript">
     function pageRedirect()
     {
@@ -20,71 +24,54 @@
       }
     }
     </script>
+    <style>
+      .navbar{
+        margin-bottom: 0;
+        border-radius: 0;
+      }
+    </style>
 </head>
-<center>
-  <div class="row">
-    <div class ="column">
-      <img id = "coolGuy" src = "coolGuy.JPG" alt = "Kevin pham with phillip" >
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Kevin's Portfolio</a>
     </div>
-    <div class ="column">
-      <center>
-      <video width= auto height="400px" controls>
-        <source src="meetKevin.mp4" type="video/mp4">
-        </center>
-    </video>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
+        <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="plank.html">Plank Keyboard</a></li>
+          <li><a href="bike.html">Bicycle Repair</a></li>
+          <li><a href="vroom.html">Vehicle Maintence</a></li>
+        </ul>
+      </li>
+        <!--- <li><a href="#">Projects</a></li> --->
+      </ul>
     </div>
   </div>
+</nav>
+
+<br>
+<div class ="container-fluid" id=content>
+<center>
+      <img id = "coolGuy" class ="img-rounded" src = "coolGuy.JPG" alt = "Kevin pham with phillip"  style = "width:30%" >
 </center>
-<br>
-
-<div class = tab id=content>
-<h2> About me </h2>
-  <p> Hi, I am a fourth year student at San Jose State University, and an aspiring computer engineer. I am 21, born and raised in San Jose.
-  In my free time, I like going on drives, taking my dog out for walks, and mountain biking. I'm a fan of motorsports, gaming, coffee, and sparkling water.
-  You can see my transcript <input type ="button" value ="here" onclick="password()">, and check out the classes I've completed.</p>
-<br>
-
-<h2> Projects </h2>
-<form>
-<select name="projects" id="projects" accesskey="target">
-  <option value = "cbim.html">Console Based Inventory Manager</option>
-  <option value = "plank.html">Plank</option>
-  <option value = "bike.html">Bicycle Repair</option>
-  <option value = "vroom.html">Vehicle Maintence</option>
-</select>
-<input type="button" value="Go!" onclick="pageRedirect()">
-</form>
-
-<p>
-<br>
-<h2> Languages Learned </h2>
-<table id = "ttable">
-<tr>
-  <th>Language</th>
-  <th>Proficiency</th>
-</tr>
-<tr>
-  <td>C++</td>
-  <td>Intermediate</td>
-</tr>
-<tr>
-  <td>Python</td>
-  <td>Intermediate</td>
-</tr>
-<tr>
-  <td>Java</td>
-  <td>Beginner</td>
-</tr>
-<tr>
-  <td>HTML/PHP</td>
-  <td>Beginner</td>
-</tr>
-<tr>
-  <td>Git</td>
-  <td>Beginner</td>
-</tr>
-</table>
 </div>
+<br>
+
+<div class = "container" id=content>
+  <h4> Hi, I am a fourth year student at San Jose State University, and an aspiring computer engineer. I am 21, born and raised in San Jose.
+  In my free time, I like going on drives, taking my dog out for walks, and mountain biking. I'm a fan of motorsports, gaming, coffee, and sparkling water.</h4>
+<br>
 
 
 
