--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Kevin's Portfolio</a>
+      <a class="navbar-brand" href="index.html">Kevin's Portfolio</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -54,28 +54,31 @@
           <li><a href="vroom.html">Vehicle Maintence</a></li>
         </ul>
       </li>
-        <!--- <li><a href="#">Projects</a></li> --->
       </ul>
     </div>
   </div>
 </nav>
 
 <br>
-<div class ="container-fluid" id=content>
-<center>
-      <img id = "coolGuy" class ="img-rounded" src = "coolGuy.JPG" alt = "Kevin pham with phillip"  style = "width:30%" >
-</center>
+
+<div class = "row">
+  <div class = "col-sm-1"></div>
+  <div class = "col-sm-5">
+    <img id = "coolGuy" class ="img-rounded" src = "coolGuy.JPG" alt = "Kevin pham with phillip"  style = "width:80%" >
+    </div>
+    <div class = "col-sm-5">
+      <br><br>
+      <h2> <b>About me</b> </h2>
+      <h4> Hi, I am a fourth year student at San Jose State University, and an aspiring computer engineer. I am 21, born and raised in San Jose.
+        In my free time, I like going on drives, taking my dog out for walks, and mountain biking. I'm a fan of motorsports, gaming, coffee, and sparkling water.</h4>
+    </div>
+    <div class = "col-sm-1">
+    </div>
 </div>
 <br>
-
-<div class = "container" id=content>
-  <h4> Hi, I am a fourth year student at San Jose State University, and an aspiring computer engineer. I am 21, born and raised in San Jose.
-  In my free time, I like going on drives, taking my dog out for walks, and mountain biking. I'm a fan of motorsports, gaming, coffee, and sparkling water.</h4>
 <br>
-
-
-
-
+<div class = "row">
+  <div class=
 
 </body>
 </html>
