--- a/bike.html
+++ b/bike.html
@@ -20,20 +20,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Kevin's Portfolio</a>
+      <a class="navbar-brand" href="index.html">Kevin Pham's Portfolio</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
-        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Projects
-        <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="plank.html">Plank Keyboard</a></li>
-          <li><a href="bike.html">Bicycle Repair</a></li>
-          <li><a href="vroom.html">Vehicle Maintence</a></li>
-        </ul>
-      </li>
       </ul>
     </div>
   </div>
@@ -57,7 +48,8 @@
 <br>
 
 <div class = container>
-  <h2><b> Work I've Done</b></h2>
+  <center><h2><b> Work I've Done</b></h2></center>
+    <br>
     <div class = "row">
       <div class = "col-md-6">
         <a href="bikes/oldBike.jpg">
@@ -76,4 +68,54 @@
         </a>
       </div>
     </div>
+    <div class = "row">
+      <div class = "col-md-6">
+        <a href="bikes/oldBlueFix.jpg">
+          <img src="bikes/oldBlueFix.jpg" alt="A free bike frame" style ="width:100%">
+          <div class="caption">
+            <p>A free bike frame I found</p>
+          </div>
+        </a>
+      </div>
+      <div class = "col-md-6">
+        <a href="bikes/newBlueFix.jpg">
+          <img src="bikes/newBlueFix.jpg" alt="The restoration" style ="width:100%">
+          <div class="caption">
+            <p>All fixed up and ready to go</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "col-md-6">
+        <a href="bikes/brokenBike.jpg">
+          <img src="bikes/brokenBike.jpg" alt="My broken bike" style ="width:100%">
+          <div class="caption">
+            <p>Chain snapped and broke derauiler hanger</p>
+          </div>
+        </a>
+      </div>
+      <div class = "col-md-6">
+        <a href="bikes/newGear.jpg">
+          <img src="bikes/newGear.jpg" alt="New bike parts" style ="width:100%">
+          <div class="caption">
+            <p>Fresh installment of a Box 2 11 speed drivetrain</p>
+          </div>
+        </a>
+      </div>
+    </div>
 </div>
+<br>
+<div class = row>
+  <div class = col-md-1> </div>
+  <div class = col-md-10>
+    <ul class="list-group">
+      <center><li class="list-group-item active">Accomplishments</li></center>
+      <li class="list-group-item">Repaired and flipped 2 bikes</li>
+      <li class="list-group-item">Installed cassette, shifter, and derauiler</li>
+      <li class="list-group-item">Installed front rack, v-brakes, tubes and tires</li>
+      <li class="list-group-item">Disassembled bike, sanded, regreased and repainted</li>
+    </ul>
+  </div>
+  <div class = col-md-1> </div>
+</row>
