content for now

--- a/bike.html
+++ b/bike.html
@@ -7,8 +7,24 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style type="text/css">
-  .tab { margin-left: 40px; }
+  <style>
+    .navbar{
+      margin-bottom: 0;
+      border-radius: 0;
+    }
+    .footer {
+      position: fixed;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      background-color: black;
+      color: white;
+      text-align: center;
+    }
+    html, body {
+      max-width: 100%;
+      overflow-x: hidden;
+    }
   </style>
 </head>
 
@@ -25,6 +41,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
+        <li class-"active"><a href="KevinPhamResume2020.pdf">Resume</a></li>
       </ul>
     </div>
   </div>
@@ -38,9 +55,8 @@
   <div class = "col-sm-2"></div>
   <div class = "col-sm-8">
   <div class = "container-fluid">
-    <h4 class = "tab"> Ever since shelter in place began, I found myself biking a lot more. With all this extra free time, I figured might as well explore the Bay Area while getting some fitness out of it. After finding a free
-      bike frame by the garbage, I began fixing the bike up with used parts from Craigslist. This led to a new obsession, and I found myself looking for bikes to ride and to fix. I began mountain biking, dirt jumping, even tandem biking
-      with my mother.</h4>
+    <h4 class = "tab"> Ever since shelter in place began, I found myself biking a lot more. With all this extra free time, I figured might as well explore the Bay Area while getting some fitness out of it.
+      This led to a new obsession, and I found myself looking for bikes to ride and to fix.</h4>
     </div>
   </div>
   <div class = "col-sm-2"></div>
@@ -110,12 +126,13 @@
   <div class = col-md-1> </div>
   <div class = col-md-10>
     <ul class="list-group">
-      <center><li class="list-group-item active">Accomplishments</li></center>
+      <center><li class="list-group-item active">Work I've Done</li></center>
       <li class="list-group-item">Repaired and flipped 2 bikes</li>
       <li class="list-group-item">Installed cassette, shifter, and derauiler</li>
       <li class="list-group-item">Installed front rack, v-brakes, tubes and tires</li>
+      <li class="list-group-item">Brake and shifter tuning</li>
       <li class="list-group-item">Disassembled bike, sanded, regreased and repainted</li>
     </ul>
   </div>
   <div class = col-md-1> </div>
-</row>
+</div>
