--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script src="https://kit.fontawesome.com/2c7c3356e6.js" crossorigin="anonymous"></script>
-    <script>
-    function password(){
-      var entry = prompt('Enter Password');
-      if (entry == 'frankbutt'){
-        window.open('transcript.html')
-      }
-    }
-    </script>
     <style>
       .navbar{
         margin-bottom: 0;
@@ -49,7 +41,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
+        <li class-"active"><a href="KevinPhamResume2020.pdf">Resume</a></li>
       </ul>
     </div>
   </div>
@@ -57,6 +50,7 @@
 
 <br>
 <br>
+<div class="container-fluid">
 <div class = "row">
   <div class = "col-sm-1"></div>
   <div class = "col-sm-5">
@@ -74,7 +68,7 @@
             </span>
         </div>
         <div class = "col-sm-4">
-          <a href="plank.html">
+          <a href="planck.html">
             <span style="color: black;">
                 <i class="fas fa-keyboard fa-10x"></i>
             </span>
@@ -92,6 +86,7 @@
       <img class ="img-rounded" src = "coolGuy.JPG" alt = "Kevin pham with phillip"  style = "width:80%" >
     <div class = "col-sm-1"></div>
     </div>
+</div>
 </div>
 
 
@@ -123,7 +118,6 @@
     <div class = "col-sm-12"><p> <p></div>
   </div>
 </footer>
-
 
 </body>
 </html>
