fixed small stuff

--- a/bike.html
+++ b/bike.html
@@ -64,7 +64,7 @@
 <br>
 
 <div class = container>
-  <center><h2><b> Work I've Done</b></h2></center>
+  <center><h2><b> Bikes </b></h2></center>
     <br>
     <div class = "row">
       <div class = "col-md-6">
