--- a/vroom.html
+++ b/vroom.html
@@ -116,7 +116,7 @@
                 <img src="vroom/helmet.jpg" alt="Safety First!">
               </div>
           </div>
-          <a class="left carousel-control" href="#myCarouse2l" data-slide="prev">
+          <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
             <span class="sr-only">Previous</span>
           </a>
