small fixes again

--- a/vroom.html
+++ b/vroom.html
@@ -113,7 +113,7 @@
                 <img src="vroom/shinyBike.jpg" alt="After the wax">
               </div>
               <div class="item">
-                <img src="vroom/helmet.jpg" alt="Safety First!">
+                <img src="vroom/bucketHead.jpg" alt="Safety First!">
               </div>
           </div>
           <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
