--- a/vroom.html
+++ b/vroom.html
@@ -129,12 +129,18 @@
         <center><h4> 2005 Yamaha Vstar 650 Custom <h4></center>
       </div>
 
+      <center><h4><b>The newest addition<b><h4>
+        <a href="vroom/suzukiSkyline.jpg">
+        <img src="vroom/suzukiSkyline.jpg" alt="suzuki on skyline" style ="width:50%"></a>
+        <h4> 2008 Suzuki SV650S ABS<h4></center>
+
       <div class = row>
         <div class = col-md-1> </div>
         <div class = col-md-10>
           <ul class="list-group">
             <center><li class="list-group-item active">Work I've Done</li></center>
             <li class="list-group-item">Routine oil and filter changes</li>
+            <li class="list-group-item">Install fender eliminator, solder new LED turn signals and plate light, as well as flasher relay</li>
             <li class="list-group-item">Replace coolant overflow tank</li>
             <li class="list-group-item">Install wind guards, mud flaps, roof rack, bike rack, canoe rack</li>
             <li class="list-group-item">Replace interior and exterior bulbs with LED</li>
