update on the bike, update resume

--- a/vroom.html
+++ b/vroom.html
@@ -104,13 +104,13 @@
             </ol>
             <div class="carousel-inner">
               <div class="item active">
-                <img src="vroom/Vstar.jpg" alt="An old bike">
+                <img src="vroom/suzukiSkyline.jpg" alt="A bike on skyline road">
               </div>
               <div class="item">
-                <img src="vroom/VstarPark.jpg" alt="Bike at the park">
+                <img src="vroom/suzukiAlices.jpg" alt="Bike at alices">
               </div>
               <div class="item">
-                <img src="vroom/shinyBike.jpg" alt="After the wax">
+                <img src="vroom/suzukiFairings.jpg" alt="The bike with fairings">
               </div>
               <div class="item">
                 <img src="vroom/bucketHead.jpg" alt="Safety First!">
@@ -126,29 +126,42 @@
           </a>
         </div>
         </div>
-        <center><h4> 2005 Yamaha Vstar 650 Custom <h4></center>
+        <center><h4> 2008 Suzuki SV650S ABS <h4></center>
       </div>
 
-      <center><h4><b>The newest addition<b><h4>
-        <a href="vroom/suzukiSkyline.jpg">
-        <img src="vroom/suzukiSkyline.jpg" alt="suzuki on skyline" style ="width:50%"></a>
-        <h4> 2008 Suzuki SV650S ABS<h4></center>
 
       <div class = row>
-        <div class = col-md-1> </div>
-        <div class = col-md-10>
+        <div class = col-md-6>
           <ul class="list-group">
             <center><li class="list-group-item active">Work I've Done</li></center>
             <li class="list-group-item">Routine oil and filter changes</li>
-            <li class="list-group-item">Install fender eliminator, solder new LED turn signals and plate light, as well as flasher relay</li>
+            <li class="list-group-item">Installed catback exhaust</li>
             <li class="list-group-item">Replace coolant overflow tank</li>
-            <li class="list-group-item">Install wind guards, mud flaps, roof rack, bike rack, canoe rack</li>
+            <li class="list-group-item">Installed wind guards, mud flaps, roof rack, bike rack, canoe rack</li>
             <li class="list-group-item">Replace interior and exterior bulbs with LED</li>
-            <li class="list-group-item">Installed short shifter as well as transmission bushings</li>
+            <li class="list-group-item">Installed short shifter</li>
+            <li class="list-group-item">Replaced shifter bushings</li>
             <li class="list-group-item">Replaced fender liner</li>
-            <li class="list-group-item">Installed 4 channel amp,speakers, and subwoofer while maintaining factory head unit and controls</li>
+            <li class="list-group-item">Installed 4 channel amp, speakers, and subwoofer while maintaining factory head unit and controls</li>
+            <li class="list-group-item">Installed sound dampening material in each door card, the trunk lid, and the spare tire compartment</li>
           </ul>
         </div>
-        <div class = col-md-1> </div>
+        <div class = col-md-6>
+          <ul class="list-group">
+            <center><li class="list-group-item active">Work I've Done</li></center>
+            <li class="list-group-item">Routine oil and filter changes</li>
+            <li class="list-group-item">Routine chain cleaning, oiling, slack adjustment</li>
+            <li class="list-group-item">Installed fender eliminator</li>
+            <li class="list-group-item">Installed new exhaust pipe</li>
+            <li class="list-group-item">Installed new turn signals in the front and rear</li>
+            <li class="list-group-item">Installed aftermarket lower fairings</li>
+          </ul>
+            <h2>Future Plans</h2>
+            <h4>I plan to keep the WRX as is. It's a good daily driver, and I feel like adding more power will just lead to more money. This model
+            is known for its glass transmission, and Subaru doesn't have the best track record with ringlands or headgaskets either. Maybe an intake for
+            cool turbo noises, but that's as far as i'll go.</h4>
+            <h4>The SV needs its valve clearance checked, and im planning on doing that once I get to winter break. Ill try to document
+            the procedure and host it here. While its still winter, I plan on bleeding the brakes and replacing the chain and sprocket</h4>
+        </div>
       </div>
     </div>
