new pic on vroom

--- a/vroom.html
+++ b/vroom.html
@@ -113,7 +113,7 @@
                 <img src="vroom/suzukiFairings.jpg" alt="The bike with fairings">
               </div>
               <div class="item">
-                <img src="vroom/bucketHead.jpg" alt="Safety First!">
+                <img src="vroom/suzukiUmun.jpg" alt="Bike at Mount umunum!">
               </div>
           </div>
           <a class="left carousel-control" href="#myCarousel2" data-slide="prev">
