added sheets link

--- a/vroom.html
+++ b/vroom.html
@@ -152,9 +152,10 @@
             <li class="list-group-item">Routine oil and filter changes</li>
             <li class="list-group-item">Routine chain cleaning, oiling, slack adjustment</li>
             <li class="list-group-item">Installed fender eliminator</li>
-            <li class="list-group-item">Installed new exhaust pipe</li>
+            <li class="list-group-item">Wrapped and installed new exhaust</li>
             <li class="list-group-item">Installed new turn signals in the front and rear</li>
             <li class="list-group-item">Installed aftermarket lower fairings</li>
+            <li class="list-group-item">More details <a href = "https://docs.google.com/spreadsheets/d/19yE8chHRgQMFbwA4DkdNOh68Q8gG5L6RmJOfdOQ0qcA/edit?usp=sharing"> here </a></li>
           </ul>
             <h2>Future Plans</h2>
             <h4>I plan to keep the WRX as is. It's a good daily driver, and I feel like adding more power will just lead to more money. This model
