updated some vroom stuff

--- a/vroom.html
+++ b/vroom.html
@@ -155,12 +155,16 @@
             <li class="list-group-item">Wrapped and installed new exhaust</li>
             <li class="list-group-item">Installed new turn signals in the front and rear</li>
             <li class="list-group-item">Installed aftermarket lower fairings</li>
-            <li class="list-group-item">More details <a href = "https://docs.google.com/spreadsheets/d/19yE8chHRgQMFbwA4DkdNOh68Q8gG5L6RmJOfdOQ0qcA/edit?usp=sharing"> here </a></li>
+            <li class="list-group-item">Maintence Log <a href = "https://docs.google.com/spreadsheets/d/19yE8chHRgQMFbwA4DkdNOh68Q8gG5L6RmJOfdOQ0qcA/edit?usp=sharing"> here </a></li>
           </ul>
             <h2>Future Plans</h2>
             <h4>I plan to keep the WRX as is. It's a good daily driver, and I feel like adding more power will just lead to more money. This model
             is known for its glass transmission, and Subaru doesn't have the best track record with ringlands or headgaskets either. Maybe an intake for
-            cool turbo noises, but that's as far as i'll go.</h4>
+            cool turbo noises, but that's as far as i'll go. <br> <br>
+            The SV is a great bike, and really my only complaint is the suspension. Due to having the ABS model, im a bit
+            limited on rear shock upgrades, and replacing the front with a GSXR fork would probably leave me with no ABS. May install some valve
+            emulators in the future.</h4>
+            <br>
         </div>
       </div>
     </div>
