more bike stuff

--- a/vroom.html
+++ b/vroom.html
@@ -152,6 +152,9 @@
             <li class="list-group-item">Routine oil and filter changes</li>
             <li class="list-group-item">Routine chain cleaning, oiling, slack adjustment</li>
             <li class="list-group-item">Installed fender eliminator</li>
+            <li class="list-group-item">Brake bleed</li>
+            <li class="list-group-item">Radiator Flush</li>
+            <li class="list-group-item">Valve clearance, spark plugs, valve cover gasket inspected and replaced</li>
             <li class="list-group-item">Wrapped and installed new exhaust</li>
             <li class="list-group-item">Installed new turn signals in the front and rear</li>
             <li class="list-group-item">Installed aftermarket lower fairings</li>
