--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
                 <i class="fas fa-cogs fa-10x"></i>
             </span>
         </div>
+        <div class = "col-sm-4">
+          <a href="store.html">
+            <span style="color: black;">
+                <i class="fas fa-leaf fa-10x"></i>
+            </span>
+        </div>
       </div>
     </div>
     <div class = "col-sm-5">
