added nasa work

--- a/index.html
+++ b/index.html
@@ -62,27 +62,33 @@
       <h2> <b> Projects </b> </h2>
       <div class = "row">
         <div class = "col-sm-4">
-          <a href="bike.html">
+          <a href="store.html">
             <span style="color: black;">
-                <i class="fas fa-bicycle fa-10x"></i>
+                <i class="fas fa-leaf fa-8x"></i>
             </span>
         </div>
         <div class = "col-sm-4">
           <a href="planck.html">
             <span style="color: black;">
-                <i class="fas fa-keyboard fa-10x"></i>
+                <i class="fas fa-keyboard fa-8x"></i>
+            </span>
+        </div>
+        <div class = "col-sm-4">
+          <a href="nasa.html">
+            <span style="color: black;">
+                <i class="fas fa-space-shuttle fa-8x"></i>
             </span>
         </div>
         <div class = "col-sm-4">
           <a href="vroom.html">
             <span style="color: black;">
-                <i class="fas fa-cogs fa-10x"></i>
+                <i class="fas fa-cogs fa-8x"></i>
             </span>
         </div>
         <div class = "col-sm-4">
-          <a href="store.html">
+          <a href="bike.html">
             <span style="color: black;">
-                <i class="fas fa-leaf fa-10x"></i>
+                <i class="fas fa-bicycle fa-8x"></i>
             </span>
         </div>
       </div>
