--- a/nasa.html
+++ b/nasa.html
@@ -49,7 +49,7 @@
 </nav>
 
 <center>
-  <h2><b> The OFS Grocery Store </b></h2>
+  <h2><b> NS3 Network Simulator </b></h2>
 </center>
 
 <div class = "row">
@@ -57,8 +57,8 @@
   <div class = "col-sm-8">
     <center>
   <div class = "container-fluid">
-    <h4> For my software engineering class, our team built a functional website to simulate an online
-    grocery store.</h4>
+    <h4> During my Summer 2021 internship with NASA Ames Research Center, I was tasked to create an AeroNautic Network Simulator.
+    </h4>
   </div> </center>
   </div>
   <div class = "col-sm-2"></div>
@@ -83,17 +83,20 @@
           </div>
         </a>
         <h2> Overview  </h2>
-        <h4> In my software engineering class, my group built an online grocery store using CSS, HTML, PHP, and MYSQL.
-          This project taught me a lot about working together, especially how the front and back ends teams must
-          collaborate to make the website operational. </h4>
+        <h4> This project was built using <a href="https://www.nsnam.org/">NS3</a>, a free open source network event simulator. The goal was to create a configurable
+        simulation in which users can adjust inputs to calculate the resulting throughput, packet delivery, and other metrics. While working with peers, this was mainly a solo project.</h4>
           <br>
           <ul class="list-group">
-            <center><li class="list-group-item active">My contributions</li></center>
-            <li class="list-group-item">Linked the customer's information from database to the checkout</li>
-            <li class="list-group-item">Generated an order number upon completion, updated item quantities in database</li>
-            <li class="list-group-item">Created checkout and payment processing page</li>
-            <li class="list-group-item">Tested user entry fields to ensure functionality</li>
-            <li class="list-group-item">Helped design SQL tables and format for database</li>
+            <center><li class="list-group-item active">The Simulation</li></center>
+            <li class="list-group-item">Used LTE topology to connect MME, SGW, ENBs, UEs, PGW</li>
+            <li class="list-group-item">User definable
+              <ol>- Amount of UE Nodes</ol>
+              <ol>- Amount of ENB Nodes</ol>
+              <ol>- Packet Size, Amount and time to send</ol>
+              <ol>- Mobile or Stationary</ol>
+            </li>
+            <li class="list-group-item">Working Netanim xml output file to view simulation</li>
+            <li class="list-group-item">Terminal and txt file output of simulation results</li>
           </ul>
       </div>
     </div>
