--- a/bike.html
+++ b/bike.html
@@ -41,7 +41,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
-        <li class-"active"><a href="KevinPhamResume2020.pdf">Resume</a></li>
+        <li class-"active"><a href="phamKevinResume.pdf">Resume</a></li>
       </ul>
     </div>
   </div>
